Corrects spacing

--- a/app/_scss/style.scss
+++ b/app/_scss/style.scss
@@ -71,6 +71,12 @@ $light-grey: #f4f4f4;
     font-family:'Montserrat-Regular',Sans-Serif;
     color: $dark-grey;
     line-height: 1.25em;
+    margin: 32px;
+  }
+  
+  h1,h2,h3
+  {
+    margin-top: 64px;
   }
   
     h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
@@ -1012,10 +1018,10 @@ $light-grey: #f4f4f4;
       }
 
 /*********************************************************************************/
-/* Banner                                                                        */
+/* pitch plan                                                                        */
 /*********************************************************************************/
 
-  #pitch
+  #pitch, #plan
   {
     background: #fff;
     text-align: center;
@@ -1023,15 +1029,10 @@ $light-grey: #f4f4f4;
     margin-bottom: 0;
   }
   
-    #pitch p
+    #pitch p, #plan p
     {
-      margin-bottom: 0;
+      margin: 0px 64px 0px 64px;
       text-align: center;
-    }
-    
-    #pitch h2
-    {
-      padding: 64px 0 0 0;
     }
 
 /*********************************************************************************/
